--- a/styles/home.css
+++ b/styles/home.css
@@ -29,3 +29,17 @@ input[type=radio]:checked+img{
 border: yellowgreen solid 5px;
 filter: invert(100%);
 }
+
+label {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.labels {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
