Oops forgot to start todays work on a new branch again. So now I'm on a new branch for today.

--- a/styles/map.css
+++ b/styles/map.css
@@ -24,3 +24,19 @@
     border: solid gold 14px;
     border-radius: 50%;
 }
+
+.cccs {
+    margin: 40px;
+    z-index: top;
+    font-size: 1.5rem;
+    font-weight: 900;
+    color: goldenrod;
+}
+
+.csss {
+    margin: 40px;
+    z-index: top;
+    font-size: 1.5rem;
+    font-weight: 900;
+    color: grey;
+}
