Added HTML elements to quests page. Created a function to render user info. User Info rendered into top of map and quest page.

--- a/styles/map.css
+++ b/styles/map.css
@@ -40,3 +40,13 @@
     font-weight: 900;
     color: grey;
 }
+
+.use {
+    display: flex;
+    flex-direction: column;
+    margin: 0px 10px 0px 20px;
+}
+
+.useinf {
+    margin: -6px;
+}
